# mydev-container

./: .dockerignore  pyproject.toml  readme.md
.devcontainer/: Dockerfile.dev  devcontainer.json  docker-compose.yml
scripts/: build.sh
